# podcastfy-demo

./: .gitattributes  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  test.md
.github/workflows/: sync.yml  update_space.yml
podcastfy-app/: app.py
