[tool.poetry]
name = "podcastfy-demo"
version = "0.2.0"
description = "Demo for podcastfy"
authors = ["Tharsis T. P. Souza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^5.4.0"
podcastfy = "^0.2.15"
gradio-client = "^1.4.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
